--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cookie-parser": "^1.4.4",
         "express": "^4.16.4",
         "express-session": "^1.15.6",
+        "mariadb": "^2.0.3",
         "moment": "^2.24.0",
         "multer": "^1.4.1",
         "mysql": "^2.16.0",
